--- a/index.html
+++ b/index.html
@@ -6,8 +6,32 @@
     <title>BigClone</title>
 </head>
 <body>
+
+    <!-- First i need a help well there wer a some tricks to downlaod the images fast from teh website and i don't know that trick do you kwno that trick?? 
+     can you help me with that trick?? -->
+
+    
     <!-- Navbar sections.. Got a confusion should i make a different html file or just append everthing's in this ?? 
      like we create the different file in the react for the each sectins. let's make it first.  -->
-     
+     <nav>
+        <div class="start">
+            <!-- here wilil be the image  -->
+            <img src="" alt="">
+        </div>
+        <div class="between">
+            <li><a href="">women</a></li>
+            <li><a href="">men</a></li>
+            <li><a href="">kids</a></li>
+            <li><a href="">baby</a></li>
+        </div>
+
+        <div class="end">
+            <li><a href="">search</a></li>
+            <li><a href="">customer</a></li>
+            <li><a href="">privacy</a></li>
+            <li><a href="">shop</a></li>
+            <li><a href="">menu</a></li>
+        </div>
+     </nav>
 </body>
 </html>
