--- a/index.html
+++ b/index.html
@@ -13,25 +13,79 @@
     
     <!-- Navbar sections.. Got a confusion should i make a different html file or just append everthing's in this ?? 
      like we create the different file in the react for the each sectins. let's make it first.  -->
-     <nav>
-        <div class="start">
-            <!-- here wilil be the image  -->
-            <img src="" alt="">
-        </div>
-        <div class="between">
-            <li><a href="">women</a></li>
-            <li><a href="">men</a></li>
-            <li><a href="">kids</a></li>
-            <li><a href="">baby</a></li>
-        </div>
+     <header>
 
-        <div class="end">
-            <li><a href="">search</a></li>
-            <li><a href="">customer</a></li>
-            <li><a href="">privacy</a></li>
-            <li><a href="">shop</a></li>
-            <li><a href="">menu</a></li>
-        </div>
+         <nav>
+             <div class="start">
+                 <!-- here wilil be the image  -->
+                 <img src="" alt="">
+                </div>
+                <div class="between">
+                    <li><a href="">women</a></li>
+                    <li><a href="">men</a></li>
+                    <li><a href="">kids</a></li>
+                    <li><a href="">baby</a></li>
+                </div>
+                
+                <div class="end">
+                    <li><a href="">search</a></li>
+                    <li><a href="">customer</a></li>
+                    <li><a href="">privacy</a></li>
+                    <li><a href="">shop</a></li>
+                    <li><a href="">menu</a></li>
+                </div>
      </nav>
+     <!-- Below nav -->
+     <div class="belowNav">
+         <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </div>
+</header>
+    <div class="container">
+        <h1>Men's T-Shirts</h1>
+        <p>Find your new favorite tees. Explore a wide range of comfortable, stylish T-shirts, from casual basics to trendy essentials.</p>
+        <i>
+            <!-- here will be the icon -->
+        </i>
+        <p>select a store to search store stock</p>
+        <!-- here wiill be the filter one -->
+         <div class="wrapSelction">
+
+             <i>
+                 <!-- here will be the filete icons; -->
+                </i>
+                <!-- i don't knwo how to add the arrow input box -->
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+            </div> 
+
+            <!-- Shop the line up. -->
+             <div class="shopLineUp">
+                <h2>Shop the line up</h2>
+                <div class="imgLineUp">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+                <button id="viewguide">VIEW FIT GUIDE</button>
+             </div>
+
+             <div class="imgShortSleeve">
+                <h1>Short Sleeve</h1>
+                <!-- here will be the tons of image do i really need to improt that image manugally or can i import it through using the map methods in the js? -->
+             </div>
+    </div>
 </body>
 </html>
