--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <div id="root"></div>
     <!-- First i need a help well there wer a some tricks to downlaod the images fast from teh website and i don't know that trick do you kwno that trick?? 
      can you help me with that trick?? -->
     <!-- ^---- use stock photos. DO not download the photos from their website they are copyrighted 
@@ -31,6 +32,8 @@
         uniqlo.com is a single page application... most things are.
         okay. so i need to check it ou. then let me check it out. 
         is not this is the same website ??
+        r u inn??? 
+        
      -->
     <header>
       <nav>
@@ -105,7 +108,7 @@
       <div class="imgShortSleeve">
         <h1>Short Sleeve</h1>
         <!-- here will be the tons of image do i really need to improt that image manugally or can i import it through using the map methods in the js? -->
-      </div>
+      </div>      
     </div>
   </body>
 </html>
